Dumping all the stuff in the resources file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Ignore Mac specific files
 .DS_Store
 build
-Resources/NiTE-Linux-x86-2.2/NiTEDevEnvironment
+*NiTEDevEnvironment
+*OpenNIDevEnvironment
