Carmine threading implemented, battling NiTE/OpenNI compile errors

--- a/sensor/Makefile
+++ b/sensor/Makefile
@@ -9,9 +9,10 @@ JINCDIR := ../include
  
 SRCEXT := cpp
 SOURCES := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
-CFLAGS := -g -Wall
+CFLAGS := -g -Wall -std=c++0x
 LIB := -L $(JLIBDIR)
 INC := -I include -I $(JINCDIR)
+LIBS := -ljester -pthread
 
 all: Carmine
 
@@ -23,8 +24,8 @@ Carmine: $(BUILDDIR)/PrimeSenseCarmine.o
 
 $(BUILDDIR)/PrimeSenseCarmine.o: $(SRCDIR)/PrimeSenseCarmine.cpp
 	@mkdir -p $(BUILDDIR)
-	@echo " $(CC) $(CFLAGS) $(INC) $< -c -o $@ $(LIB) -ljester"; \
-	$(CC) $(CFLAGS) $(INC) $< -c -o $@ $(LIB) -ljester
+	@echo " $(CC) $(CFLAGS) $(INC) $< -c -o $@ $(LIB) $(LIBS)"; \
+	$(CC) $(CFLAGS) $(INC) $< -c -o $@ $(LIB) $(LIBS)
 
 clean:
 	@echo " Cleaning..."; 
