--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,9 @@ SENSOR_LIB := ../sensor/lib
 SENSOR_INC := ../sensor/include
 JESTER_LIB := ../lib
 JESTER_INC := ../include
-LIBS := -lcarmine -ljester -lpthread
+LIBS := -lcarmine -ljester -lpthread -lOpenNI2 -lNiTE2
+CARMINELIB := -L $(OPENNI2_REDIST) -L $(NITE2_REDIST)
+CARMINEINC := -I $(OPENNI2_INCLUDE) -I $(NITE2_INCLUDE)
 
 TLIB := -L $(JESTER_LIB) -L $(SENSOR_LIB)
 TINC := -I $(JESTER_INC) -I $(SENSOR_INC)
@@ -15,4 +17,9 @@ TINC := -I $(JESTER_INC) -I $(SENSOR_INC)
 SkeletonVisualizer:
 	@echo " Building tests"
 	@echo " $(CC) $(CFLAGS) $(TINC) $@.cpp -o ../bin/$@ $(TLIB) $(LIBS)"; \
-	 $(CC) $(CFLAGS) $(TINC) $@.cpp -o ../bin/$@ $(TLIB) $(LIBS)
+	 $(CC) $(CFLAGS) $(TINC) $(CARMINEINC) $@.cpp -o ../bin/$@ $(TLIB) $(CARMINELIB) $(LIBS)
+
+clean:
+	find ./bin -type f -not -name 'NiTE2' | xargs rm
+
+.PHONY: clean
