Leap palm tracking integrated.

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,25 +7,18 @@ SENSOR_LIB := ../sensor/lib
 SENSOR_INC := ../sensor/include
 JESTER_LIB := ../lib
 JESTER_INC := ../include
-LIBS := -lcarmine -ljester -lpthread -lOpenNI2 -lNiTE2 -DGL_GLEXT_PROTOTYPES -lGL -lglut -lGLU
-DLLIBS := -lpthread -lOpenNI2 -lNiTE2
+LIBS := -lcarmine -lleap -ljester -lpthread -lLeap -lOpenNI2 -lNiTE2 -DGL_GLEXT_PROTOTYPES -lGL -lglut -lGLU
 CARMINELIB := -L $(OPENNI2_REDIST) -L $(NITE2_REDIST)
 CARMINEINC := -I $(OPENNI2_INCLUDE) -I $(NITE2_INCLUDE)
+LEAPLIB := -L $(LEAP_REDIST)
+LEAPINC := -I $(LEAP_INCLUDE)
 
 TLIB := -L $(JESTER_LIB) -L $(SENSOR_LIB)
 TINC := -I $(JESTER_INC) -I $(SENSOR_INC)
-
-DLLIB := $(CARMINELIB) 
-DLINC := $(CARMINEINC)
 
 all: SkeletonVisualizer SensorDataLogger
 
 SkeletonVisualizer:
 	@echo " Building tests"
-	@echo " $(CC) $(CFLAGS) $(TINC) $(CARMINEINC) GLSL_helper.cpp GeometryCreator.cpp $@.cpp -o ../bin/$@ $(TLIB) $(CARMINELIB) $(LIBS)"; \
-	 $(CC) $(CFLAGS) $(TINC) $(CARMINEINC) GLSL_helper.cpp GeometryCreator.cpp $@.cpp -o ../bin/$@ $(TLIB) $(CARMINELIB) $(LIBS)
-	 
-SensorDataLogger:
-	@echo " Building data logger"
-	@echo " $(CC) $(CFLAGS) $(DLINC) SensorDataLogger.cpp -o ../bin/$@ $(DLLIB) $(DLLIBS)"; \
-	$(CC) $(CFLAGS) $(DLINC) SensorDataLogger.cpp -o ../bin/$@ $(DLLIB) $(DLLIBS) 
+	@echo " $(CC) $(CFLAGS) $(TINC) $(CARMINEINC) $(LEAPINC) GLSL_helper.cpp GeometryCreator.cpp $@.cpp -o ../bin/$@ $(TLIB) $(CARMINELIB) $(LEAPLIB) $(LIBS)"; \
+	 $(CC) $(CFLAGS) $(TINC) $(CARMINEINC) $(LEAPINC) GLSL_helper.cpp GeometryCreator.cpp $@.cpp -o ../bin/$@ $(TLIB) $(CARMINELIB) $(LEAPLIB) $(LIBS)
