Leap palm tracking implemented. DataFusionModule::SetSkeletonFromJoints can now use the default joint positions if either of the joint positions for the bone being set are not provided

--- a/test/Makefile
+++ b/test/Makefile
@@ -16,7 +16,7 @@ LEAPINC := -I $(LEAP_INCLUDE)
 TLIB := -L $(JESTER_LIB) -L $(SENSOR_LIB)
 TINC := -I $(JESTER_INC) -I $(SENSOR_INC)
 
-all: SkeletonVisualizer SensorDataLogger
+all: SkeletonVisualizer
 
 SkeletonVisualizer:
 	@echo " Building tests"
