Data fusion refactor complete. Problem exists in merging bone generated from default start.

--- a/sensor/Makefile
+++ b/sensor/Makefile
@@ -13,7 +13,7 @@ SOURCES := $(shell find $(SRCDIR) -type f -name *.$(SRCEXT))
 OBJECTS := $(patsubst $(SRCDIR)/%,$(BUILDDIR)/%,$(SOURCES:.$(SRCEXT)=.o))
 COBJECTS := $(BUILDDIR)/PrimeSenseCarmineFactory.o $(BUILDDIR)/PrimeSenseCarmineImpl.o
 LOBJECTS := $(BUILDDIR)/LeapMotionFactory.o $(BUILDDIR)/LeapMotionImpl.o
-CFLAGS := -g -Wall -std=c++0x
+CFLAGS := -g -Wall -std=c++0x -O3
 LIB := -L $(JLIBDIR) -L $(OPENNI2_REDIST) -L $(NITE2_REDIST) -L $(LEAP_REDIST)
 INC := -I include -I $(JINCDIR) -I $(OPENNI2_INCLUDE) -I $(NITE2_INCLUDE) -I $(LEAP_INCLUDE)
 LIBS := -ljester -pthread -lLeap -lOpenNI2 -lNiTE2
